<resources>
    <string name="app_name">Manillas XYZ</string>
    <string name="manillas">Escoja las opciones</string>
    <string name="material">Material</string>
    <string name="dije">Dije</string>
    <string name="tipo">Tipo</string>
    <string name="moneda">Moneda</string>
    <string name="cantidad">Cantidad</string>
    <string name="calcular">Calcular</string>
    <string name="limpiar">Limpiar</string>
    <string name="error_cantidad">Digite la cantidad</string>
    <string name="error_cantidad_0">La cantidad debe ser mayor que 0</string>

    <string name="material_cuero">Cuero</string>
    <string name="material_cuerda">Cuerda</string>
    <string-array name="materiales">
        <item>@string/material_cuero</item>
        <item>@string/material_cuerda</item>
    </string-array>

    <string name="dije_martillo">Martillo</string>
    <string name="dije_ancla">Ancla</string>
    <string-array name="dijes">
        <item>@string/dije_martillo</item>
        <item>@string/dije_ancla</item>
    </string-array>


    <string name="tipo_oro">Oro</string>
    <string name="tipo_baño_oro">Baño de oro</string>
    <string name="tipo_oro_rosado">Oro rosado</string>
    <string name="tipo_plata">Plata</string>
    <string name="tipo_niquel">Niquel</string>
    <string-array name="tipos">
        <item>@string/tipo_oro</item>
        <item>@string/tipo_baño_oro</item>
        <item>@string/tipo_oro_rosado</item>
        <item>@string/tipo_plata</item>
        <item>@string/tipo_niquel</item>
    </string-array>


    <string name="tipo_moneda_pesos">Pesos</string>
    <string name="tipo_moneda_dolares">Dolares</string>
    <string-array name="tipo_monedas">
        <item>@string/tipo_moneda_pesos</item>
        <item>@string/tipo_moneda_dolares</item>
    </string-array>

</resources>
